--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,14 +9,14 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL10Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
   sql:
     init:
       mode: always
   datasource:
-    url: ${SPRING_DATASOURCE_MAIN:jdbc:postgresql://localhost:5433/Storage}
+    url: ${SPRING_DATASOURCE_MAIN:jdbc:postgresql://localhost:5432/postgres}
     username: ${POSTGRES_USER:user}
     password: ${POSTGRES_PASSWORD:pass}
     driver-class-name: org.postgresql.Driver
