--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>storage</name>
 	<description>storage</description>
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<org.mapstruct.extensions.spring.version>1.0.1</org.mapstruct.extensions.spring.version>
